tests/core/errors/test_formatting_data/duplicate_target/TARGETS.fixture
load(":make_target.bzl", "make_target")

make_target("foo")

make_target("foo")
